# freemodbus

./: CMakeLists.txt
demo/: CMakeLists.txt
demo/WIN32/: demo.cpp
demo/WIN32/Port/: portevent_m.c  portserial_m.c  porttimer_m.c
doc/: tips.dox
modbus/: CMakeLists.txt  mb.c  mb_m.c
modbus/ascii/: mbascii.c  mbascii.h
modbus/functions/: mbfuncother.c
modbus/include/: mbconfig.h  mbport.h
modbus/rtu/: mbrtu.c
